vcluster-gitops/argocd/kyverno/manifests/flux-vcluster-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-flux-ignore-to-storage-vci
spec:
  validationFailureAction: Enforce
  rules:
    - name: add-ignore-annotation
      match:
        any:
          - resources:
              kinds:
                - storage.loft.sh/*/VirtualClusterInstance
              operations:
                - CREATE
              selector:
                matchExpressions:
                  - key: kustomize.toolkit.fluxcd.io/name
                    operator: Exists
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              kustomize.toolkit.fluxcd.io/reconcile: disabled
